# Light-Field-Codec

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Light_Field_Codec  README.md  run  run.sh  simulate
PSNR/: compute.m  main.m
Scripts/: PlataformaExecucaoMultithread.py  simulation.py
Scripts/Logs/: Bikes_15_15_13_13_0.1_13_13_4x4x4x4  Bikes_15_15_13_13_100_13_13_4x4x4x4  FountainVincent2_15_15_13_13_0.1_13_13_4x4x4x4  FountainVincent2_15_15_13_13_100_13_13_4x4x4x4  FountainVincent2_15_15_13_13_10_13_13_4x4x4x4  FountainVincent2_15_15_13_13_1_13_13_4x4x4x4
docs/: block.md
simulation/: debug.py  settings.py  settings_quant_seg.py  settings_quant_seg_4.py  settings_quant_seg_luma.py  settings_seg.py  settings_seg_4.py  simulate.sh  simulation.py
simulation/core/: global_settings.py  metrics.py  screen.py  settings.py  simulation.py
simulation/settings/: settings.py  settings_luma.py  settings_quant.py  settings_quant_luma.py  settings_reference.py
src/: Block.h  BlockCompare.h  CAVLC.cpp  CAVLC.h  DiscreteCosineTransformContext.h  DiscreteCosineTransformContext4D.h  DiscreteSineTransformContext.h  DiscreteSineTransformContext4D.h  DpcmDC.cpp  DpcmDC.h  EncBitstreamBuffer.cpp  EncBitstreamBuffer.h  EncBitstreamVLC.cpp  EncBitstreamVLC.h  EncBitstreamWriter.cpp  EncBitstreamWriter.h  EncoderParameters.cpp  EncoderParameters.h  LRE.cpp  LRE.h  LightField.cpp  LightField.h  MultiDimensionalOrthogonalTransformMixin.h  Node.cpp  Node.h  OrthogonalTransformMixin.h  Point4D.cpp  Point4D.h  Prediction.cpp  Prediction.h  Quantization.cpp  Quantization.h  Statistics.cpp  Statistics.h  Time.cpp  Time.h  Transform.cpp  Transform.h  TransformContext.h  Tree.cpp  (+6 more)
src/deprecated/: DiscreteCosineTransformContext.h  DiscreteCosineTransformContext4D.h  DiscreteSineTransformContext.h  DiscreteSineTransformContext4D.h  OldTransform.cpp  OrthogonalTransformMixin.h  Transform.cpp  Transform.h  TransformContext.h  TransformProtocol.h
src/sim/lfcodec/: Typedef.h
src/sim/luma/: Typedef.h
src/sim/quant/: Typedef.h
src/sim/quant_luma/: Typedef.h
src/sim/quant_seg/: Typedef.h
src/sim/quant_seg_4/: Typedef.h
src/sim/quant_seg_luma/: Typedef.h
src/sim/reference/: Typedef.h
src/sim/seg/: Typedef.h
src/sim/seg_4/: Typedef.h
test/: AxisFlipTest.cpp  BlockSegmentation.cpp  CMakeLists.txt
test/axis_flip_tests/: CMakeLists.txt
test/block_compare_tests/: BlockCompareTest.cpp  CMakeLists.txt
test/block_segmentation_tests/: BlockSegmentation.cpp
test/block_tests/: BlockTest.cpp
test/old_api_comparison/: OldAPITest.cpp
tst/: AxisFlipTest.cpp  BlockCompareTest.cpp  BlockTest.cpp  CMakeLists.txt  OldAPITest.cpp  OrthogonalContextMixinTest.cpp  TransformContextTest.cpp  TransformProtocolTest.cpp  TransformTest.cpp  utils.h
